--- a/RIval/MainWindow.xaml
+++ b/RIval/MainWindow.xaml
@@ -2,12 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:tb="http://www.hardcodet.net/taskbar"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Ignite"
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
         xmlns:controls="clr-namespace:BlurryControls.Controls;assembly=BlurryControls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="605.368" Width="991.891" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" MouseDown="Window_MouseDown">
+        Title="MainWindow" Height="605.368" Width="991.891" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" WindowStyle="None" MouseDown="Window_MouseDown" StateChanged="Window_StateChanged">
     <Grid>
         <Grid x:Name="OuterBlurContainer" Margin="-10,0,0,0">
             <Grid x:Name="InnerBlurContainer" Margin="10,21,0,0">
@@ -17,6 +18,9 @@
                     <ColumnDefinition Width="103*"/>
                     <ColumnDefinition Width="97*"/>
                 </Grid.ColumnDefinitions>
+                <tb:TaskbarIcon Visibility="Visible"
+                ToolTipText="Ignite Launcher" IconSource="111111.ico" TrayLeftMouseDown="TaskbarIcon_TrayLeftMouseDown"/>
+                
                 <Image x:Name="PartiallyBluredDoge"
                        Stretch="UniformToFill"
                        Source="Resources/Images/Bg/bfa_bg_1.jpg" Height="620" VerticalAlignment="Bottom" Grid.ColumnSpan="4" Margin="0,-32,0,-4">
